# prvcsh

./: Dockerfile  README.md  app.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  routes.py  run.bat  utils.py
attached_assets/: Pasted-Error-sqlite3-OperationalError-table-scan-result-has-no-column-named-websocket-leak-tested-SQL--1744377700815.txt  Pasted-Prompt-Title-Build-a-Privacy-IP-Leak-Detection-Website-Flask-Bootstrap-SQLite-Prompt-Descr-1744322707716.txt
instance/: privacy_detector.db
static/css/: custom.css
static/js/: anonymity_timeline.js  antibot_detection_analyzer.js  audio_fingerprint.js  battery_fingerprint.js  behavioral_analysis.js  canvas_fingerprint_check.js  cname_cloaking.js  cookie_check.js  cookie_manager.js  dns_leak.js  dns_privacy_checker.js  do_not_track.js  email_leak.js  extension_compatibility_check.js  extension_detection.js  fingerprint.js  fingerprint_entropy.js  fingerprint_randomization.js  font_fingerprint.js  hardware_fingerprint.js  http3_support_check.js  https_upgrade_checker.js  language_check.js  password_check.js  permission_check.js  privacy_extensions_analyzer.js  privacy_features.js  privacy_quick_actions.js  risk_visualization.js  scanner.js  security_headers.js  social_media_detector.js  ssl_security.js  timezone_consistency_check.js  tracker_blocker.js  user_authenticity_check.js  vpn_assessor.js  webrtc_leak.js  websocket_leak.js  xss_vulnerability_check.js
templates/: extensions.html  history.html  index.html  layout.html  results.html  test_static.html
