[project]
name = "privacy-detector"
version = "1.0.0"
description = "Privacy and IP Leak Detection Platform"
authors = ["Your Name <your.email@example.com>"]
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "ipaddress>=1.0.23",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3"
]

[tool.poetry]
name = "privacy-detector"
version = "1.0.0"
description = "Privacy and IP Leak Detection Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
ipaddress = ">=1.0.23"
psycopg2-binary = ">=2.9.10"
requests = ">=2.32.3"
sqlalchemy = ">=2.0.40"
trafilatura = ">=2.0.0"
werkzeug = ">=3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
